css/training.css
@font-face {
  font-family: 'OpenSans-ExtraBold';
  src: url('../assets/fonts/OpenSans-ExtraBold.ttf')  format('truetype');
}

.max-wrap {
	padding: 40px 10%
}

.colored-box {
	background: #ECEDEC;
}

.box-shadow {
	-webkit-box-shadow: 0 0px 9px rgba(199, 193, 193, 0.74);
	-moz-box-shadow: 0 0px 9px rgba(199, 193, 193, 0.74);
	box-shadow: 0 0px 9px rgba(199, 193, 193, 0.74);
}

.border-bottom {
    border-bottom: 1px solid #F1F1F1;
}

.site-header .wrap {
	width: 80%;
}

.t-bold {
	font-weight: 600;
}

h1 {
	margin-bottom: 40px;
    font-size: 2em;
    text-align: center;
    text-transform: uppercase;
    font-family: 'OpenSans-ExtraBold';
}

h2 {
	margin-top: 40px;
	margin-bottom: 40px;
	text-align: center;
	text-transform: uppercase;
}

ul.dashed > li {
	list-style-type: none;
}

.tw-hyd {
	color: white;
    display: block;
    margin-left: 68px;
    margin-top: -20px;
}

.about.max-wrap {
	padding-top: 25px;
	text-align: center;
}

.about h1 {
	margin-bottom: 20px;
}

/********************* VENUE ********************/

.venue-mask {
  background-image: url(../assets/img/banner-desktop.jpg);
  background-size: cover;
  margin: 0 auto;
  box-sizing: border-box;
}

.tw-logo {
    width: 230px;
}

.venue-mask .venue {
	width: 100%;
	height: 100%;
	padding: 20px 100px 20px 100px;
	box-sizing: border-box;
	background: rgba(0, 0, 0, 0.35);
}

.venue-mask .venue a {
	text-decoration: none;
}

.venue h1 {
	color: #fff;
	font-size: 4em;
	margin-bottom: 50px;
	text-align: right;
    text-transform: uppercase;
    font-weight: 500;
    line-height: 1.2em;
}

.venue .date,
.venue .time {
	color: #fff;
	font-size: 22px;
	font-weight: 500;
  	letter-spacing: 0.5px;
  	text-align: right;
  	text-transform: capitalize;
}

.venue .condition {
    text-align: right;
    color: white;
    margin-bottom: 40px;
}

.venue .date sup {
	font-size: 16px;
    vertical-align: text-top;
}

.venue .register {
	margin-top: 25px;
	text-align: right;
}

.venue .register a {
  	color: #FFF;
    padding: 7px 70px;
    display: inline-block;
    border: 1px solid #ffffff;
    border-radius: 30px;
    background: rgba(0, 0, 0, 0.37);
    text-transform: uppercase;
    font-weight: 500;
    transition: all .3s ease-out;
}

.venue .register a:hover {
	background-color: #2C2923;
}

.venue .location a {
	color: #E4B15F;
}

/********************* SEATS & DATES ********************/

.seats-dates {
	background: rgba(0, 0, 35, 0.5);
    color: white;
    padding: 30px 25px;
    text-align: center;
}

.seats-dates .deadlines {
	display: flex;
}

.seats-dates .item {
	flex-grow: 1;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.seats-dates .field {
	font-size: 26px;
	text-align: right;
	text-transform: uppercase;
	vertical-align: top;
    display: inline-block;
    line-height: 1.2em;
    margin-top: 14px;
}

.seats-dates .item:last-child .field {
	margin-top: 0;
}

.seats-dates .field:first-letter {
	font-size: 34px;
    font-weight: 500;
}

.seats-dates .field-info {
	font-size: 4em;
    border-left: 2px solid white;
    padding-left: 20px;
    margin-left: 20px;
    font-weight: 700;
}

.seats-dates .field-info .field-info-month {
	font-weight: normal;
}

.seats-dates .seats-dates--description {
	text-align: center;
	margin: 30px 20% 0 20%;
}

/********************* TOPICS ********************/

.topics {
	text-align: center;
}

.topics ul li{
	padding: 5px;
}
/********************* SELECTION-CRITERIA ********************/

.selection-criteria {
}



/********************* TRAINERS ********************/

.trainers-container {
	text-align: center;
}

.trainers-container .trainers {
	width: 49%;
	display: inline-block;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.trainers ul {
	padding: 0;
	margin: 0;
	text-align: center;
}

.trainers ul li {
	list-style: none;
	display: inline-block;
	text-align: center;
}

.trainers .trainer {
	margin: 20px;
}

.trainers .trainer img{
	text-align: center;
	display: block;
	width: 130px;
	height: 130px;
	margin: 0 auto 15px auto;
	-webkit-border-radius: 100%;
	-moz-border-radius: 100%;
	border-radius: 100%;
	-webkit-box-shadow: 0px 0px 3px #ABABAB;
	-moz-box-shadow: 0px 0px 3px #ABABAB;
	box-shadow: 0px 0px 3px #ABABAB;
	transition: all 0.3s ease-out;
	box-sizing: border-box;
}

.trainers .trainer img:hover{
	padding: 5px;
	-webkit-box-shadow: 0px 0px 8px #8E8B8B;
	-moz-box-shadow: 0px 0px 8px #8E8B8B;
	box-shadow: 0px 0px 8px #8E8B8B;
}

.why-free {
	text-align: center;
}

/********************* EVENT-LOCATION ********************/

.event-location {
	margin-top: 40px;
}

.event-location a {
	color: black;
}

.event-location a:hover .address{
	background: white;
	bottom: 20px;
	-wekit-box-shadow: -3px 0 9px rgba(132, 130, 130, 0.83);
	-moz-box-shadow: -3px 0 9px rgba(132, 130, 130, 0.83);
	box-shadow: -3px 0 9px rgba(132, 130, 130, 0.83);
}

.event-location .map {
	background: url(../assets/img/map-h.jpg);
	height: 600px;
	position: relative;
}

.event-location .map .address {
	position: absolute;
    background: rgba(255, 255, 255, 0.83);
    padding: 20px 30px;
    font-size: 14px;
    right: 0;
    bottom: 0;
    text-align: right;
    -webkit-box-shadow: -3px -2px 9px rgba(177, 173, 173, 0.83);
    -moz-box-shadow: -3px -2px 9px rgba(177, 173, 173, 0.83);
    box-shadow: -3px -2px 9px rgba(177, 173, 173, 0.83);
    -webkit-transition: all .3s ease-out;
	-moz-transition: all .3s ease-out;
	transition: all .3s ease-out;
}

.event-location .map .address h4 {
	margin-bottom: 7px;
	font-weight: 500;
}

.event-location a {
	display: block;
	width: 100%;
	height: 100%;
}

.container {
	width: 80%;
	margin: 20px auto;
	padding: 40px;
	box-sizing: border-box;
}

.queries {
	text-align: center;
}

.queries .contact-us {
	font-size: 24px;
	word-wrap: break-word;
	word-break: break-all;
}

.queries .contact-us:hover {
	text-decoration: none;
	color: #2a7ae2;
}

.queries .send-your-code {
	font-size: 20px;
	font-weight: 500;
}

footer p.about {
	max-width: 600px;
}

.problem-statement h2{
	text-align: center;
	color: #2a7ae2;
	cursor: pointer;
}

.problem-statement pre {
    white-space: pre-wrap;       /* CSS 3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

.problem-statement #problemStatement1Desc,
.problem-statement #problemStatement2Desc {
	max-height: 3000px;
	overflow: hidden;
	transition: max-height .4s ease-out;
	word-break: break-word;
}

.problem-statement #problemStatement1Desc .pdf-link,
.problem-statement #problemStatement2Desc .pdf-link {
	text-align: center;
	margin-bottom: 5px;
}

.problem-statement #problemStatement1Desc .pdf-link a,
.problem-statement #problemStatement2Desc .pdf-link a{
	font-size: 1.5em;
	color: #E2731F;
}

.problem-statement #problemStatement1Desc .pdf-link a img,
.problem-statement #problemStatement2Desc .pdf-link a img{
	vertical-align: middle;
}

.problem-statement #problemStatement1Desc.hide,
.problem-statement #problemStatement2Desc.hide {
	max-height: 0;
}

@media screen and (max-width: 900px) {
	.venue-mask {
		background-image: url(../assets/img/banner-tablet.jpg);
		background-position-x: 0;
	}

	.trainers-container .trainers {
		width: 100%;
	}
}

@media screen and (max-width: 600px) {
	.max-wrap {
		padding: 40px 15px;
	}

	.venue-mask {
		background-image: url(../assets/img/banner-mobile.jpg);
	}

	.venue-mask .venue {
		padding: 40px;
	}

	.venue h1 {
		font-size: 2em;
	}

	.venue .date {
		font-size: 13px;
	}

	.venue .register {
		text-align: center;
	}

	.about-description {
		text-align: justify;
	}

	.seats-dates {
		padding: 0 0 10px 0;
	}

	.seats-dates .item {
		width: 49%;
		padding: 10px;
		display: inline-block;
	}

	.seats-dates .item--last {
		width: 100%;
		margin-top: 20px;
	}

	.seats-dates .deadlines {
		display: block;
	}

	.seats-dates .field {
	    display: block;
	    text-align: center;
	    padding-bottom: 15px;
	    border-bottom: 2px solid #ffffff;
	}

	.seats-dates .field-info {
	    border-left: 0;
	    margin-left: 0;
	    padding-left: 0;
	}


	.seats-dates .item--last .field{
		border-bottom: 0;
	}

	.seats-dates .item--last .field-info{
		border-top: 2px solid #ffffff;
		padding-top: 10px;
	}

	.seats-dates .seats-dates--description {
	    margin: 15px;
	    text-align: justify;
	}

	.event-location .map {
		background: url(../assets/img/map.jpg);
		background-size: cover;
	}

	.event-location .map .address {
		left: 0;
		text-align: center;
	}

	.why-free p {
		text-align: justify;
	}

	.site-footer {
		padding: 30px 15px;
	}
}

